--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div class="streaks" id="achievement">Achievement: Bronze</div>
                 <div class="share-buttons">
                     <a class="whatsapp" href="#"><img src="images/whatsapp.jfif" alt=""></a>
+                    <a class="telegram" href="#"><img src="images/telegram.jfif" alt=""></a>
                 </div>
             </div>
             <div class="stats-number">
